--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-redux": "5.0.6",
     "react-test-renderer": "15.6.1",
     "redux": "3.7.2",
-    "redux-devtools": "3.4.0"
+    "redux-devtools": "3.4.0",
+    "redux-saga": "^0.15.6"
   },
   "devDependencies": {
     "react-scripts": "1.0.13"
